[package]
name = "inotifyworld"
edition = "2021"
version = "0.1.0"
#authors = ["Alice <a@example.com>", "Bob <b@example.com>"]

# https://github.com/johnthagen/min-sized-rust
# cargo build            # (7M)
# cargo build --release  # (4M, or 300K after strip=true)
[profile.release]
strip = true        # Automatically strip symbols from the binary
#opt-level = "z"    # Optimize for size?
lto = true	    # Enable Link Time Optimization (LTO)
codegen-units = 1   # Serial build. Slow, but better opt
#panic = "abort"    # No debug stacktrace awesomeness?

[dependencies]
inotify = "0.10.0"
