cargo-features = ["edition2024"]

[package]
name = "loki2nats"
edition = "2021"
version = "0.1.0"
#authors = ["Alice <a@example.com>", "Bob <b@example.com>"]

# https://github.com/johnthagen/min-sized-rust
# cargo build            # (7M)
# cargo build --release  # (4M, or 300K after strip=true)
[profile.release]
strip = true        # Automatically strip symbols from the binary
#opt-level = "z"    # Optimize for size?
lto = true	    # Enable Link Time Optimization (LTO)
codegen-units = 1   # Serial build. Slow, but better opt
#panic = "abort"    # No debug stacktrace awesomeness?

[dependencies]
hyper = "1.1.0"
hyper-util = "0.1.3"
native-tls = "0.2.11"
#async-native-tls = "0.5.0"
tokio = {version = "1.36.0", features = ["full"]}
tokio-native-tls = "0.3.1"
tungstenite = {version = "0.21.0", features = ["native-tls", "handshake"]}
#serde_json = "1.0"
url = "2.5.0"
urlencoding = "2.1.3"
fastwebsockets = {version = "0.6.0", features = ["upgrade"]}
anyhow = "1.0.79"
http-body-util = "0.1.0"
#async-tls = "0.13.0"
#async-std = "1.12.0"

#fast_websocket_client = "0.1.3"
