cargo-features = ["edition2024"]

[package]
name = "loki2nats"
edition = "2021"
version = "0.1.0"
#authors = ["Alice <a@example.com>", "Bob <b@example.com>"]

# https://github.com/johnthagen/min-sized-rust
# cargo build            # (7M)
# cargo build --release  # (4M, or 300K after strip=true)
[profile.release]
strip = true        # Automatically strip symbols from the binary
#opt-level = "z"    # Optimize for size?
lto = true	    # Enable Link Time Optimization (LTO)
codegen-units = 1   # Serial build. Slow, but better opt
#panic = "abort"    # No debug stacktrace awesomeness?

[dependencies]
anyhow = "1.0"
fastwebsockets = {version = "0.6", features = ["upgrade"]}
http-body-util = "0.1"
hyper = "1.1"
hyper-util = "0.1"
serde_json = "1.0"
tokio-native-tls = "0.3"
tokio = {version = "1.36", features = ["full"]}
url = "2.5"
urlencoding = "2.1"
